Fixed navbar & responsive navbar collapse

--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -19,8 +19,8 @@ $accent-color: #F06292;
 $primary-color-dark: darken($primary-color, 12.5);
 $accent-color-dark: darken($accent-color, 12.5);
 
-
-
 $max-mobile: 480px;
 $max-tablet: 992px;
 $max-desktop: 1200px;
+
+$navbar-height: 40px;
