--- a/src/css/components/navbar.scss
+++ b/src/css/components/navbar.scss
@@ -1,36 +1,66 @@
 .navbar {
+  background-color: $primary-color;
+  border-bottom: solid $primary-color-dark 2px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 40px;
 
-
-  ul {
-    background-color: $primary-color;
-    border-bottom: solid $primary-color-dark 2px;
-    list-style: none;
-    display: block;
+  .nav-container {
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+  nav {
+    float: right;
+    display: inline-block;
     padding: 0;
-    li {
+    a {
       display: inline-block;
       padding: 10px;
       margin-right: 10px;
-    }
-    a{
       color: $base-font-color;
       text-decoration: none;
     }
   }
-  .icon {
+  .toggle {
     color: $base-font-color;
     float: right;
     display: none;
+    padding: 10px;
+    font-size: 20px;
+  }
+  .brand {
+    padding: 10px;
+    float: left;
+    a {
+      color: $base-font-color;
+      text-decoration: none;
+    }
   }
 }
 
 @media all and (max-width: $max-mobile) {
-  .navbar{
-    ul li:not(:first-child):not(.icon){
+  .navbar {
+    nav a {
       display: none;
     }
-    .icon{
+    .toggle {
       display: inline-block;
+    }
+  }
+
+  .navbar.collapsed {
+    nav {
+      position: absolute;
+      top: $navbar-height;
+      left: 0;
+      right: 0;
+      a {
+        background-color: $primary-color;
+        margin-right: 0;
+        display: block;
+      }
     }
   }
 }
